# WalytisOffchain

./: .gitignore  ContactPlanning.md  Makefile  ReadMe.md  ToDo.md  blockstore.py  blockstore_rocksdb.py  data_block.py  generic_blockchain.py  pip_install.py  private_blockchain.py  pyproject.toml  requirements.txt
src/: data_block.py  private_blockchain.py
src/private_blocks/: blockstore.py  data_block.py  private_blockchain.py
src/walytis_offchain/: blockstore.py  log.py  private_blockchain.py
tests/: _testing_utils.py  conftest.py  docker_block_sharing.py  prebuilt_group_did_managers.py  pytest.ini  run_all_tests.py  test.py  test_all.py  test_block_sharing.py  test_generic_blockchain_features.py  test_private_blockchain.py  test_thread_object.py  testing_utils.py
tests/priblocks_docker/: build_docker.py  build_priblocks_prereqs.sh  build_priblocks_testing.sh  create_test_identity.py  identity_access_1.tar  identity_access_2.tar  priblocks_docker.py  priblocks_prereqs.dockerfile  priblocks_testing.dockerfile
tests/waloff_docker/: build_docker.py  build_waloff_prereqs.sh  build_waloff_testing.sh  waloff_docker.py  waloff_prereqs.dockerfile  waloff_testing.dockerfile
